Update notebook with additional product data and output enhancements
- Incremented execution count for a code cell.
- Added new product data entries to the output.
- Enhanced output display by printing the bottom 25% of products in sales.
- Removed commented-out code for loading data to streamline the notebook.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2690,7 +2690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -2708,7 +2708,18 @@
       "6  prod_1008              0\n",
       "7  prod_1009              0\n",
       "8  prod_1010              1\n",
-      "9  prod_1012              0\n"
+      "9  prod_1012              0\n",
+      "      ProductID  PurchaseCount\n",
+      "6303  prod_9983              2\n",
+      "6304  prod_9985              1\n",
+      "6305  prod_9988              1\n",
+      "6306  prod_9989              1\n",
+      "6307  prod_9990              1\n",
+      "6308  prod_9992              0\n",
+      "6309  prod_9993              1\n",
+      "6311  prod_9995              1\n",
+      "6312  prod_9997              0\n",
+      "6313  prod_9999              0\n"
      ]
     }
    ],
@@ -2721,8 +2732,16 @@
     "\n",
     "# Output the names of these products\n",
     "print(\"Products in the bottom 25% of sales:\")\n",
-    "print(bottom_25_products[['ProductID', 'PurchaseCount']].head(10))"
+    "print(bottom_25_products[['ProductID', 'PurchaseCount']].head(10))\n",
+    "print(bottom_25_products[['ProductID', 'PurchaseCount']].tail(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2899,13 +2918,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load data\n",
-    "# df = pd.read_csv('your_clickstream_data.csv')  # or use your original df\n",
-    "\n",
     "# Preprocessing\n",
     "preprocessor = TrafficDataPreprocessor(df_data)\n",
     "df_cleaned = preprocessor.preprocess()\n",
