Refactor SARIMA and Random Forest evaluation sections in main.ipynb
- Updated execution counts for code cells.
- Added SARIMA forecasting implementation with a plot for the next 48 hours.
- Enhanced Random Forest evaluation output for both test and train datasets.
- Corrected model name from 'randoomforest' to 'randomforest'.
- Removed an empty code cell to streamline the notebook.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2933,7 +2933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -2945,79 +2945,107 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 4.07\n",
-      "MAE: 3.27\n",
-      "R² Score: -0.059\n",
-      "MAPE: 23.61%\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'RMSE': 4.070773510660879,\n",
-       " 'MAE': 3.2667138690040227,\n",
-       " 'R2': -0.058652400970458984,\n",
-       " 'MAPE': 23.606755062917475}"
-      ]
-     },
-     "execution_count": 272,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# ---------------- SARIMA Forecasting ----------------\n",
     "sarima_forecaster = TimeSeriesForecaster(hourly_traffic['Total'])\n",
     "sarima_forecaster.train_sarima(order=(2,1,2), seasonal_order=(1,1,1,24))\n",
-    "sarima_forecaster.plot_forecast(steps=48)  # next 48 hours\n",
-    "\n",
-    "# ---------------- ML Forecasting ----------------\n",
-    "ml_predictor = MLTrafficPredictor(model='xgboost')\n",
-    "X_train, X_test, y_train, y_test = ml_predictor.prepare_ml_data(hourly_features)\n",
-    "ml_predictor.train(X_train, y_train)\n",
-    "ml_predictor.evaluate(X_test, y_test)\n"
+    "sarima_forecaster.plot_forecast(steps=48)  # next 48 hours"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 4.06\n",
-      "MAE: 3.25\n",
-      "R² Score: -0.052\n",
-      "MAPE: 23.53%\n"
+      "Evaluation for test - Random Forest\n",
+      "RMSE: 4.07\n",
+      "MAE: 3.27\n",
+      "R² Score: -0.059\n",
+      "MAPE: 23.61%\n",
+      "\n",
+      "Evaluation for train - Random Forest\n",
+      "RMSE: 3.81\n",
+      "MAE: 3.04\n",
+      "R² Score: 0.066\n",
+      "MAPE: 22.77%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'RMSE': 4.057232045981769,\n",
-       " 'MAE': 3.254974714098823,\n",
-       " 'R2': -0.05162098193636333,\n",
-       " 'MAPE': 23.52554768101562}"
+       "{'RMSE': 3.809732583050664,\n",
+       " 'MAE': 3.0385279175475937,\n",
+       " 'R2': 0.06642621755599976,\n",
+       " 'MAPE': 22.771105813700824}"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ---------------- ML Forecasting ----------------\n",
-    "ml_predictor = MLTrafficPredictor(model='randoomforest')\n",
+    "# ---------------- ML Forecasting: XGBoost ----------------\n",
+    "ml_predictor = MLTrafficPredictor(model='xgboost')\n",
     "X_train, X_test, y_train, y_test = ml_predictor.prepare_ml_data(hourly_features)\n",
     "ml_predictor.train(X_train, y_train)\n",
-    "ml_predictor.evaluate(X_test, y_test)"
+    "print('Evaluation for test - Random Forest')\n",
+    "ml_predictor.evaluate(X_test, y_test)\n",
+    "print('\\nEvaluation for train - Random Forest')\n",
+    "ml_predictor.evaluate(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation for test - Random Forest\n",
+      "RMSE: 4.06\n",
+      "MAE: 3.26\n",
+      "R² Score: -0.052\n",
+      "MAPE: 23.56%\n",
+      "\n",
+      "Evaluation for train - Random Forest\n",
+      "RMSE: 3.81\n",
+      "MAE: 3.05\n",
+      "R² Score: 0.064\n",
+      "MAPE: 22.91%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'RMSE': 3.814836537590725,\n",
+       " 'MAE': 3.0539819167629725,\n",
+       " 'R2': 0.06392313947053663,\n",
+       " 'MAPE': 22.909043059817083}"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ---------------- ML Forecasting: Random Forest ----------------\n",
+    "ml_predictor = MLTrafficPredictor(model='randomforest')\n",
+    "X_train, X_test, y_train, y_test = ml_predictor.prepare_ml_data(hourly_features)\n",
+    "ml_predictor.train(X_train, y_train)\n",
+    "print('Evaluation for test - Random Forest')\n",
+    "ml_predictor.evaluate(X_test, y_test)\n",
+    "print('\\nEvaluation for train - Random Forest')\n",
+    "ml_predictor.evaluate(X_train, y_train)"
    ]
   },
   {
@@ -3106,13 +3134,6 @@
     "# plt.tight_layout()\n",
     "# plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
