Refactor e-commerce traffic prediction notebook: reset execution counts, add comments for clarity, and generate forecasts before and after hyperparameter tuning.

--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "id": "dd5940f6",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from prophet import Prophet\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
     "\n",
     "class ECommerceTrafficPredictor:\n",
     "    \"\"\"\n",
@@ -371,6 +372,8 @@
     "        train, test = ts[:train_size], ts[train_size:]\n",
     "        \n",
     "        # Fit SARIMA model\n",
+    "        # ARIMA components (autoregressive, differencing, moving average)\n",
+    "        # Seasonal components (seasonal autoregressive, seasonal differencing, seasonal moving average, and seasonality period)\n",
     "        # Order: (p,d,q) for trend, (P,D,Q,s) for seasonality\n",
     "        # Using common values for hourly data\n",
     "        model = SARIMAX(\n",
@@ -691,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 351,
    "id": "6eeae553",
    "metadata": {},
    "outputs": [],
@@ -702,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 352,
    "id": "ff432c72",
    "metadata": {},
    "outputs": [
@@ -755,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 353,
    "id": "2b517e9e",
    "metadata": {},
    "outputs": [
@@ -789,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 354,
    "id": "f2ba129f",
    "metadata": {},
    "outputs": [
@@ -813,7 +816,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 355,
    "id": "633de353",
    "metadata": {},
    "outputs": [
@@ -847,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 356,
    "id": "a2f46e44",
    "metadata": {},
    "outputs": [
@@ -871,7 +874,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 357,
    "id": "6d50ce81",
    "metadata": {},
    "outputs": [
@@ -986,7 +989,7 @@
        "max     1000.000000     10.000000    499.981538"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 358,
    "id": "79fd0c2d",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1069,7 @@
        "Amount     0.019444  -0.006819  1.000000"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 359,
    "id": "df5f0ad5",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1230,7 @@
        "4          0  "
       ]
      },
-     "execution_count": 327,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 360,
    "id": "21eca937",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 361,
    "id": "28e1d865",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 362,
    "id": "d2ff7d49",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 363,
    "id": "c6a855ae",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 364,
    "id": "33ed2c76",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 365,
    "id": "bf41d14f",
    "metadata": {},
    "outputs": [
@@ -1381,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 366,
    "id": "47f8274f",
    "metadata": {},
    "outputs": [
@@ -1406,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 367,
    "id": "1b32610e",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 368,
    "id": "06c555c6",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 369,
    "id": "ddc37a2f",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "02:59:26 - cmdstanpy - INFO - Chain [1] start processing\n"
+      "10:05:54 - cmdstanpy - INFO - Chain [1] start processing\n"
      ]
     },
     {
@@ -1475,7 +1478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "02:59:26 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "10:05:54 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -1495,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 370,
    "id": "1b2be94c",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1588,7 @@
        "prophet       5.025984  4.146677 -0.647262  30.697336"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1602,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 371,
+   "id": "87677e8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generating forecasts before hyperparameter tuning...\n",
+      "Best model based on RMSE: sarima\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate forecasts before hyperparameter tuning \n",
+    "print(\"\\nGenerating forecasts before hyperparameter tuning...\")\n",
+    "best_model = metrics['RMSE'].idxmin()  # Choose model with lowest RMSE\n",
+    "print(f\"Best model based on RMSE: {best_model}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
    "id": "2c5123c8",
    "metadata": {},
    "outputs": [
@@ -1642,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 373,
    "id": "d29b7c57",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 374,
    "id": "d914fef5",
    "metadata": {},
    "outputs": [
@@ -1678,21 +1704,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 216 candidates, totalling 648 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mac/anaconda3/lib/python3.11/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
-      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 216 candidates, totalling 648 fits\n",
       "Best Params for RandomForestRegressor: {'max_depth': 5, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 5, 'n_estimators': 300}\n"
      ]
     }
@@ -1708,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 375,
    "id": "b9f75da0",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 376,
    "id": "98bf64ff",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1837,7 @@
        "prophet       5.025984  4.146677 -0.647262  30.697336"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 377,
    "id": "02d757fc",
    "metadata": {},
    "outputs": [
@@ -1848,21 +1860,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Generating forecasts...\n",
+      "Generating forecasts after hyperparameter tuning...\n",
       "Best model based on RMSE: xgboost\n"
      ]
     }
    ],
    "source": [
     "# Generate forecasts\n",
-    "print(\"\\nGenerating forecasts...\")\n",
+    "print(\"\\nGenerating forecasts after hyperparameter tuning...\")\n",
     "best_model = metrics['RMSE'].idxmin()  # Choose model with lowest RMSE\n",
     "print(f\"Best model based on RMSE: {best_model}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 378,
    "id": "05a12558",
    "metadata": {},
    "outputs": [
@@ -1887,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 379,
    "id": "491243cd",
    "metadata": {},
    "outputs": [
@@ -1980,7 +1992,7 @@
        "2024-07-26 19:00:00  15.397837    True"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
