Update docstring to specify supported models for hyperparameter tuning

--- a/app.ipynb
+++ b/app.ipynb
@@ -468,7 +468,7 @@
     "        Perform hyperparameter tuning for models using GridSearchCV.\n",
     "        \n",
     "        Args:\n",
-    "            model (object): Model to tune (e.g., RandomForestRegressor)\n",
+    "            model (object): Model to tune (XGBoost, RandomForestRegressor)\n",
     "            X (DataFrame): Feature matrix\n",
     "            y (Series): Target variable\n",
     "            cv (int): Number of cross-validation folds\n",
